@@ -27,6 +27,8 @@ Changes in administration of the server
       set your used charset ("SET NAMES utf8").
     * jabberd14 now uses libpopt for command line parsing.
     * jabberd14 now detects stale pidfiles, and ignores them.
+    * jabberd14 does not cache passwords in the session manager anymore,
+      you can now just update passwords in SQL and they are used instantly.
 
 Changes in features visible to the user
     * Support for Flexible Offline Message Retrieval (JEP-0013)
